cabal-version:      3.0
name:               llvm-backend-test
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable llvm-backend-test
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    ghc-options:      -fllvm
    build-depends:    base >=4.14.0.0 && <5
    hs-source-dirs:   app
    default-language: Haskell2010
